# rust-experiments

./: Cargo.toml  build_spotify.sh  data.txt  mandelbrot.txt
src/: consoler.rs  iced_native.rs  json-convert.rs  loopcli.rs  main.rs  spotify.rs  ui.rs  windows-native.rs
src/mods/: binarymask.rs  highlighter.rs  interfaces.rs  login.rs  math.rs  mod.rs  ncurses.rs
