[package]
name = "rust-cmd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0.64", features = ["preserve_order"] }
serde = { version = "1.0.130", features = ["derive"] }
tempfile = "3.2.0"
futures = "0.3"
http = "0.2.4"
reqwest = { version = "0.11.13", default_features = false, features = [ "rustls-tls", "json"] }
rustls = "0.20.7"
tokio = { version = "1.23.0", features = ["full"] }
iced = { version = "0.6.0", features = ["image", "svg", "tokio"] }
iced_native = "0.7.0"
# winit = "0.27.5"
# glutin = "0.30.3"
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

[target.'cfg(linux)'.dependencies]
ncurses = "5.101.0"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "json-convert"
path = "src/json-convert.rs"

[[bin]]
name = "spotify"
path = "src/spotify.rs"

[[bin]]
name = "loopcli"
path = "src/loopcli.rs"

[[bin]]
name = "iced"
path = "src/iced_native.rs"

[[bin]]
name = "windows-native"
path = "src/windows-native.rs"

[[bin]]
name = "consoler"
path = "src/consoler.rs"


